--- a/src/app/platform/Reports/driver-profile-reporting/driver-profile-reporting.component.html
+++ b/src/app/platform/Reports/driver-profile-reporting/driver-profile-reporting.component.html
@@ -1,6 +1,7 @@
 <app-unauthorized-page (isAuthorized)="isAuthorizedUser($event)" *ngIf="!isAuthorized"></app-unauthorized-page>
 
-<div [className]="sidebarCheck ? 'half-open-breadcrum breadcrumb-box' : 'full-open-breadcrum breadcrumb-box' " [hidden]="!isAuthorized">
+<div [className]="sidebarCheck ? 'half-open-breadcrum breadcrumb-box' : 'full-open-breadcrum breadcrumb-box' "
+  [hidden]="!isAuthorized">
   <ol class="breadcrumb breadcrumb-arrow ">
     <li><a class="icon ion-ios-home" routerLink="/iol"> Dashboard </a> </li>
     <li><a> Reports</a></li>
@@ -8,7 +9,9 @@
   </ol>
 </div>
 
-<div [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' " style="padding-bottom:200px" [hidden]="!isAuthorized">
+<div
+  [className]="sidebarCheck ? 'half-open-sidebar page-content  container-fluid' : 'full-open-sidebar page-content  container-fluid' "
+  style="padding-bottom:200px" [hidden]="!isAuthorized">
   <div class="panel-heading font-weight-600 margin-bottom-0">
   </div>
 
@@ -133,7 +136,8 @@
                               <div class="col-lg-12">
                                 <div class="radio-custom checkbox-inline1 radio-warning">
                                   <input type="radio" id="666r" value="selectEndDate" name="radio"
-                                    formControlName="radio" (change)="changeGender($event)">
+                                    (change)="changeGender($event)">
+                                    <!-- formControlName="radio" -->
                                   <label for="666r">Select a Period </label>
                                 </div>
                               </div>
@@ -306,7 +310,8 @@
                           </ng-container>
 
                           <tr mat-header-row *matHeaderRowDef="driverSafetyReport"></tr>
-                          <tr mat-row *matRowDef="let row; columns: driverSafetyReport;" (click)="profileNewTable(row, filtersTable)">
+                          <tr mat-row *matRowDef="let row; columns: driverSafetyReport;"
+                            (click)="profileNewTable(row, filtersTable)">
                           </tr>
                         </table>
                         <div *ngIf="users == ''" class="no-records">No records found</div>
@@ -446,7 +451,10 @@
                           <ng-container matColumnDef="shift_time">
                             <th mat-header-cell *matHeaderCellDef>SHIFT TIME</th>
                             <td mat-cell *matCellDef="let row">
-                              {{ (row.shift_time == null || row.shift_time == "None") ? '-': '' }} {{ (row.shift_start_time == null) ? '': timeConversion(row.shift_start_time) + ' - ' }} {{ (row.shift_end_time == null || row.shift_end_time === 'Non-Shift Record') ? '': timeConversion(row.shift_end_time) }}</td>
+                              {{ (row.shift_time == null || row.shift_time == "None") ? '-': '' }} {{
+                              (row.shift_start_time == null) ? '': timeConversion(row.shift_start_time) + ' - ' }} {{
+                              (row.shift_end_time == null || row.shift_end_time === 'Non-Shift Record') ? '':
+                              timeConversion(row.shift_end_time) }}</td>
                           </ng-container>
 
                           <ng-container matColumnDef="deviation">
@@ -827,7 +835,8 @@
                       </div>
                     </div>
                     <div class="table-responsive margin-top-20 padding-15">
-                      <p-progressBar *ngIf="showIndeterminateProgressProfile" [style]="{'height': '3px'}" mode="indeterminate">
+                      <p-progressBar *ngIf="showIndeterminateProgressProfile" [style]="{'height': '3px'}"
+                        mode="indeterminate">
                       </p-progressBar>
                       <table matSort (matSortChange)="sortUserListProfile($event)"
                         class="table margin-bottom-0 table-condensed1 table-bordered1 text-wrap theme-table1"
@@ -836,7 +845,8 @@
                           <th mat-header-cell *matHeaderCellDef>Show on Map</th>
                           <td mat-cell *matCellDef="let row">
                             <div *ngIf="row.latitude && row.longitude">
-                              <a data-target="#editpop1" (click)="openEditModal(row)" data-toggle="modal">Show On Map</a>
+                              <a data-target="#editpop1" (click)="openEditModal(row)" data-toggle="modal">Show On
+                                Map</a>
                             </div>
                             <div *ngIf="!row.latitude || !row.longitude">
                               <span>N/A</span>
@@ -880,8 +890,8 @@
                         <tr mat-row *matRowDef="let row; columns: extendedReport;"></tr>
                       </table>
                       <!-- <div *ngIf="extendedTableData.length === '' " class="no-records">No records found</div> -->
-                      <mat-paginator translate="no" #userPaginator (page)="onProfilePagination($event)" [length]="extendeduserlength" [hidePageSize]="true"
-                        showFirstLastButtons [pageSize]="10">
+                      <mat-paginator translate="no" #userPaginator (page)="onProfilePagination($event)"
+                        [length]="extendeduserlength" [hidePageSize]="true" showFirstLastButtons [pageSize]="10">
                       </mat-paginator>
                     </div>
                   </div>
