--- a/src/app/platform/reporting/maintenance-reporting/maintenance-reporting.component.html
+++ b/src/app/platform/reporting/maintenance-reporting/maintenance-reporting.component.html
@@ -3,16 +3,12 @@
     (generate)="generatePDFReport('maintenances')">
 </app-reporting-buttons>
 
-<!-- <app-export-csv [fileName]="'Maintenance Report'" [dateGenerated]="false" [rows]="dataSource"
-    [cols]="csvMaintenanceCols" *ngIf="dataSource?.length"></app-export-csv> -->
-
-<a [href]="downloadableLink">
+<a (click)="downloadableExcelLink(downloadableLink)">
     <button type="button" class="btn-info btn  font-size-12 pull-right btn-sm" style="float:left">
         <i class="fa fa-file-o margin-right-5"></i>
         Export as XLS
     </button>
 </a>
-
 
 <div class="col-lg-12 margin-top-10 padding-0">
     <div class="table-responsive" style="border: 1px solid #ebebeb;">
